--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,16 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+@article{Steegenga2014,
+   abstract = {Aging is a progressive process that results in the accumulation of intra- and extracellular alterations that in turn contribute to a reduction in health. Age-related changes in DNA methylation have been reported before and may be responsible for aging-induced changes in gene expression, although a causal relationship has yet to be shown. Using genome-wide assays, we analyzed age-induced changes in DNA methylation and their effect on gene expression with and without transient induction with the synthetic transcription modulating agent WY14,643. To demonstrate feasibility of the approach, we isolated peripheral blood mononucleated cells (PBMCs) from five young and five old healthy male volunteers and cultured them with or without WY14,643. Infinium 450K BeadChip and Affymetrix Human Gene 1.1 ST expression array analysis revealed significant differential methylation of at least 5 % (ΔYO > 5 %) at 10,625 CpG sites between young and old subjects, but only a subset of the associated genes were also differentially expressed. Age-related differential methylation of previously reported epigenetic biomarkers of aging including ELOVL2, FHL2, PENK, and KLF14 was confirmed in our study, but these genes did not display an age-related change in gene expression in PBMCs. Bioinformatic analysis revealed that differentially methylated genes that lack an age-related expression change predominantly represent genes involved in carcinogenesis and developmental processes, and expression of most of these genes were silenced in PBMCs. No changes in DNA methylation were found in genes displaying transiently induced changes in gene expression. In conclusion, aging-induced differential methylation often targets developmental genes and occurs mostly without change in gene expression. © 2014 The Author(s).},
+   author = {Wilma T. Steegenga and Mark V. Boekschoten and Carolien Lute and Guido J. Hooiveld and Philip J. De Groot and Tiffany J. Morris and Andrew E. Teschendorff and Lee M. Butcher and Stephan Beck and Michael Müller},
+   doi = {10.1007/S11357-014-9648-X},
+   issn = {15744647},
+   issue = {3},
+   journal = {Age},
+   keywords = {DNA methylation,Epigenetic biomarkers of aging,Epigenetics,Gene expression,Molecular aging,PBMCs},
+   pages = {1523-1540},
+   pmid = {24789080},
+   publisher = {Springer},
+   title = {Genome-wide age-related changes in DNA methylation and gene expression in human PBMCs},
+   volume = {36},
+   url = {/pmc/articles/PMC4082572/ /pmc/articles/PMC4082572/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4082572/},
+   year = {2014},
 }
-
-
