changes to main doc in aging2

--- a/references.bib
+++ b/references.bib
@@ -14,3 +14,15 @@
    url = {/pmc/articles/PMC4082572/ /pmc/articles/PMC4082572/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4082572/},
    year = {2014},
 }
+
+@article{Horvath2013,
+   author = {Steve Horvath},
+   doi = {10.1186/gb-2013-14-10-r115},
+   issn = {1465-6906},
+   issue = {10},
+   journal = {Genome Biology},
+   pages = {R115},
+   title = {DNA methylation age of human tissues and cell types},
+   volume = {14},
+   year = {2013},
+}
